# poetry-uv-project

./: README.md  poetry-to-uv.sh  pyproject.toml  pyproject.toml.poetry_backup
boilerplate_poetry_project/: api.py
my_project/: add.py
